# later

./: .gitignore  README.md  SPEC.md  plan.md
daemon/: pyproject.toml
daemon/later/: __init__.py  api.py  db.py  main.py  models.py  opener.py  scheduler.py
extension/: build.sh
extension/manifests/: chrome.json  firefox.json
extension/src/: background.js
extension/src/lib/: api.js
extension/src/popup/: popup.css  popup.html  popup.js
launchd/: com.later.daemon.plist  install.sh  uninstall.sh
