[project]
name = "later"
version = "0.1.0"
description = "Background daemon for scheduling URLs to open at specific times"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "orjson>=3.10.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
later = "later.main:run"
